# sucker

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: sucker.cpp.CA8C69954AFEE040.idx  sucker.h.AF75D9FBA5018657.idx
cmake/: deps.cmake  lib.cmake  util.cmake
lib/: CMakeLists.txt  sucker.cpp  sucker.h
test/: CMakeLists.txt
